Affixed the width of content to a set value to avoid collapsing the navigation bar elements. Also shortened the text spacing in the content component to make it look nicer. Changed the page titles to capital letters.

--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -48,6 +48,8 @@ color: black;
   background-color: #e5e5e5;
   font-family: Univers, sans-serif;
   flex-grow: 1;
+  letter-spacing: -1px;
+  max-width: 1355px;
 }
 
 .main h2{
